[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openai>=2.36.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.33.1",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.16.1",
]
